--- a/ubicacion/templates/ubicacion/consulta/carrera.html
+++ b/ubicacion/templates/ubicacion/consulta/carrera.html
@@ -27,7 +27,7 @@
                                     <th>{{ carrera.cod_sede }}-{{ carrera.cod_facultad }}-{{ carrera.cod_escuela }}-{{ carrera.cod_carrera }}</th>
                                     <th>{{ carrera.carrera.nombre.capitalize }}</th>
                                     <th>
-                                        <a href="{% url 'ubicacion:carrera' carrera.cod_sede carrera.cod_facultad carrera.cod_escuela carrera.cod_carrera %}"
+                                        <a href="{% url 'ubicacion:carrera' carrera.pk %}"
                                            class="btn btn-outline-info">Ver
                                             Detalle</a></th>
                                 </tr>
