--- a/templates/includes/header/partial_unidad_dropdown.html
+++ b/templates/includes/header/partial_unidad_dropdown.html
@@ -7,7 +7,7 @@
     {% if request.user.perfil.facultad %}
         <div class="dropdown-menu" aria-labelledby="navbarDropdown">
             <a class="dropdown-item"
-               href="{% url 'ubicacion:unidad' request.user.perfil.facultad.cod_sede request.user.perfil.facultad.cod_facultad %}">Dashboard</a>
+               href="{% url 'ubicacion:unidad' request.user.perfil.facultad.pk %}">Dashboard</a>
 
 
             {% if perms.unidad.ver_reporte %}
