--- a/actividades/templates/actividades/propias.html
+++ b/actividades/templates/actividades/propias.html
@@ -9,7 +9,7 @@
 
 {% block content %}
     <div class="row">
-        <div class="col-md-6 offset-md-3">
+        <div class="col-12">
             <nav aria-label="breadcrumb">
                 <ol class="breadcrumb">
                     <li class="breadcrumb-item"><a href="{% url 'core:index' %}">Inicio</a></li>
@@ -19,7 +19,7 @@
         </div>
     </div>
     <div class="row">
-        <div class="col-md-6 offset-md-3 col-sm-12">
+        <div class="col-12">
             <div class="card">
                 <div class="card-header">
                     <div class="btn-group" role="group" aria-label="Button group with nested dropdown">
