--- a/actividades/templates/actividades/admin/pendientes.html
+++ b/actividades/templates/actividades/admin/pendientes.html
@@ -7,8 +7,21 @@
 {% endblock %}
 
 {% block content %}
+
     <div class="row">
-        <div class="col-md-8 offset-md-2 col-sm-12">
+        <div class="col-md-12">
+            <nav aria-label="breadcrumb">
+                <ol class="breadcrumb">
+                    <li class="breadcrumb-item"><a href="{% url 'core:index' %}">Inicio</a></li>
+                    <li class="breadcrumb-item active" aria-current="page">Actividades Pendientes</li>
+                </ol>
+            </nav>
+        </div>
+    </div>
+
+
+    <div class="row">
+        <div class="col-md-12 col-sm-12">
             <div class="card">
                 <div class="card-body">
                     <h4 class="card-title">Actividades Pendientes</h4>
