--- a/actividades/templates/actividades/pendientes.html
+++ b/actividades/templates/actividades/pendientes.html
@@ -1,5 +1,8 @@
 {% extends 'base.html' %}
 
+{% block title %}Actividades Pendientes{% endblock %}
+
+
 {% block head %}
     <link href="https://cdn.datatables.net/1.10.16/css/jquery.dataTables.min.css" rel="stylesheet">
     <link href="https://cdn.datatables.net/1.10.16/css/dataTables.bootstrap4.min.css" rel="stylesheet">
@@ -7,10 +10,10 @@
 
 {% block content %}
     <div class="row">
-        <div class="col-md-8 offset-md-2 col-sm-12">
+        <div class="col-md-12 col-sm-12">
             <div class="card">
                 <div class="card-body">
-                    <div class="card-title"><h4>Actividades Pendientes</h4></div>
+                    <div class="card-title"><h4>Actividades</h4></div>
                     <div class="card-text">
                         {% include 'actividades/include/tabla_actividad.html' %}
                     </div>
