--- a/ubicacion/templates/ubicacion/consulta/sede.html
+++ b/ubicacion/templates/ubicacion/consulta/sede.html
@@ -7,7 +7,7 @@
 {% block title %}Consultar - Sedes{% endblock %}
 {% block content %}
     <div class="row">
-        <div class="col-md-8 offset-md-2">
+        <div class="col-12">
             <div class="card">
                 <div class="card-body">
                     <h4 class="card-title">Consulta de Sedes</h4>
