--- a/actividades/templates/actividades/detalle.html
+++ b/actividades/templates/actividades/detalle.html
@@ -9,51 +9,51 @@
             <div class="card">
                 <div class="card-body">
                     <h4 class="card-title">{{ actividad.get_clase_display.capitalize }}: {{ actividad.nombre_actividad }}</h4>
-                    <p class="card-text">Realizado
+                    <p class="card-text"><b>Realizado</b>
                         por: {{ actividad.usuario.perfil.primer_apellido }}, {{ actividad.usuario.perfil.primer_nombre }}
                         - {{ actividad.usuario.perfil.codigo }}</p>
                     {% if request.user == actividad.usuario or perms.actividades.aprobar_actividad and request.user.perfil.departamento == actividad.departamento %}
-                        <p class="card-text">Estado: {{ actividad.get_estado_display }}</p>
+                        <p class="card-text"><b>Estado</b>: {{ actividad.get_estado_display }}</p>
                     {% endif %}
-                    <p class="card-text">Fecha: {{ actividad.fecha }}</p>
+                    <p class="card-text"><b>Fecha:</b> {{ actividad.fecha }}</p>
                     {#   Campos Especificos   #}
                     {% if actividad.lugar %}
-                        <p class="card-text">Lugar donde se realizo: {{ actividad.lugar }}</p>
+                        <p class="card-text"><b>Lugar</b>: {{ actividad.lugar }}</p>
                     {% endif %}
                     {% if actividad.duracion %}
-                        <p class="card-text">Duracion: {{ actividad.duracion }} Dias</p>
+                        <p class="card-text"><b>Duracion</b>: {{ actividad.duracion }} Dias</p>
                     {% endif %}
                     {% if actividad.tipo %}
-                        <p class="card-text">Tipo de publicacion: {{ actividad.get_tipo_display }}</p>
+                        <p class="card-text"><b>Tipo de publicacion</b>: {{ actividad.get_tipo_display }}</p>
                     {% endif %}
                     {% if actividad.lugar_publicacion %}
-                        <p class="card-text">Lugar de Publicacion: {{ actividad.lugar_publicacion }}</p>
+                        <p class="card-text"><b>Lugar de Publicacion</b>: {{ actividad.lugar_publicacion }}</p>
                     {% endif %}
                     {% if actividad.codigo %}
-                        <p class="card-text">Codigo de Investigacion: {{ actividad.codigo }}</p>
+                        <p class="card-text"><b>Codigo de Investigacion</b>: {{ actividad.codigo }}</p>
                     {% endif %}
                     {% if actividad.isbn %}
-                        <p class="card-text">Codigo ISBN: {{ actividad.isbn }}</p>
+                        <p class="card-text"><b>Codigo ISBN</b>: {{ actividad.isbn }}</p>
                     {% endif %}
                     {% if actividad.editorial %}
-                        <p class="card-text">Editorial: {{ actividad.editorial }}</p>
+                        <p class="card-text"><b>Editorial</b>: {{ actividad.editorial }}</p>
                     {% endif %}
                     {% if actividad.pais %}
-                        <p class="card-text">Pais: {{ actividad.pais }}</p>
+                        <p class="card-text"><b>Pais</b>: {{ actividad.pais }}</p>
                     {% endif %}
                     {% if actividad.info_titulo %}
-                        <p class="card-text">Nombre del Titulo: {{ actividad.info_titulo }}</p>
+                        <p class="card-text"><b>Nombre del Titulo</b>: {{ actividad.info_titulo }}</p>
                     {% endif %}
                     {% if actividad.centro_estudio %}
-                        <p class="card-text">Centro de Estudio: {{ actividad.centro_estudio }}</p>
+                        <p class="card-text"><b>Centro de Estudio</b>: {{ actividad.centro_estudio }}</p>
                     {% endif %}
                     {% if actividad.resumen %}
                         <hr/>
-                        <p class="card-text">Resumen: {{ actividad.resumen|safe }}</p>
+                        <p class="card-text"><b>Resumen</b>: {{ actividad.resumen|safe }}</p>
                     {% endif %}
                     {% if request.user == actividad.usuario %}
                         <hr/>
-                        <p class="card-text">Motivo de Rechazo: {{ actividad.motivo_rechazo|safe }}</p>
+                        <p class="card-text"><b>Motivo de Rechazo</b>: {{ actividad.motivo_rechazo|safe }}</p>
                         <hr/>
                     {% endif %}
                 </div>
@@ -68,9 +68,11 @@
                                 </button>
                             </form>
                             <hr/>
+                            {#  TODO: Agregar Permiso de Rechazo de Actividad #}
                             <a class="btn btn-outline-danger"
                                href="{% url 'actividad:rechazar' actividad.pk %}"><i class="fas fa-times-circle"></i>
-                                Rechazar</a>{% endif %}
+                                Rechazar</a>
+                        {% endif %}
                         <a href="{{ actividad.get_edit_url }}" class="btn btn-outline-info"><i class="fa fa-edit"></i>
                             Editar</a>
                         <a href="/media/{{ actividad.archivo }}" class="btn btn-outline-primary" download=""><i
