--- a/estudiantes/templates/estudiantes/anteproyecto/lista.html
+++ b/estudiantes/templates/estudiantes/anteproyecto/lista.html
@@ -8,7 +8,7 @@
 
 {% block content %}
     <div class="row">
-    <div class="col-md-8 offset-md-2 col-sm-12">
+    <div class="col-12">
         <div class="card">
             <div class="card-body">
                 <div class="card-title"><h4>Anteproyectos</h4>
