--- a/templates/includes/header/partial_escuela_dropdown.html
+++ b/templates/includes/header/partial_escuela_dropdown.html
@@ -25,25 +25,25 @@
     </a>
     {% if request.user.perfil.escuela %}
         <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-
-
+            <a class="dropdown-item" href="#"> Dashboard</a>
+            <div class="dropdown-divider"></div>
+            <a class="dropdown-item" href="#"> Reportes</a>
             {% if perms.estudiantes.ver_estudiantes %}
+                <div class="dropdown-divider"></div>
                 <a class="dropdown-item" href="{% url 'estudiante:lista' %}">Estudiantes <span
                         class="badge badge-primary">{{ request.user.perfil.escuela.estudiantes.count }}</span></a>
             {% endif %}
 
             {% if perms.estudiantes.add_anteproyecto %}
+                <div class="dropdown-divider"></div>
                 <a class="dropdown-item" href="{% url 'estudiante:anteproyectos-unidad' %}">Anteproyectos <span
                         class="badge badge-primary">{{ request.user.perfil.escuela.anteproyectos.all.count }}</span></a>
             {% endif %}
 
             {% if perms.estudiantes.add_proyecto %}
+                <div class="dropdown-divider"></div>
                 <a class="dropdown-item" href="{% url 'estudiante:proyectos-facultad' %}">Proyectos <span
                         class="badge badge-primary">{{ request.user.perfil.escuela.proyectos.count }}</span></a>
-            {% endif %}
-
-            {% if perms.ubicacion.ver_reporte_escuela %}
-                <a class="dropdown-item" href="#">Reportes</a>
             {% endif %}
         </div>
     {% endif %}
