--- a/templates/includes/header/partial_search_dropdown.html
+++ b/templates/includes/header/partial_search_dropdown.html
@@ -6,8 +6,11 @@
     </a>
     <div class="dropdown-menu" aria-labelledby="navbarDropdown">
         <a class="dropdown-item" href="{% url 'ubicacion:sedes' %}">Sedes</a>
+        <div class="dropdown-divider"></div>
         <a class="dropdown-item" href="{% url 'ubicacion:unidades' %}">Facultades</a>
+        <div class="dropdown-divider"></div>
         <a class="dropdown-item" href="{% url 'ubicacion:secciones' %}">Escuelas y Departamentos</a>
+        <div class="dropdown-divider"></div>
         <a class="dropdown-item" href="{% url 'ubicacion:carreras' %}">Carreras</a>
     </div>
 </li>
